%% ConversationService と依存クラスの関係

classDiagram
    class ConversationService {
        -Session _db
        -PracticeSessionRepository _session_repo
        -SessionMessageRepository _message_repo
        -SessionParticipantRepository _participant_repo
        -LLMProvider _llm
        -TTSService _tts
        +process_message() ConversationResponse
        +start_conversation() ConversationResponse
        -_pick_random_participant() SessionParticipant
        -_build_conversation_history() list
        -_generate_response() str
        -_get_character_voice() str
    }

    class StreamingConversationService {
        -Session _db
        -PracticeSessionRepository _session_repo
        -SessionMessageRepository _message_repo
        -SessionParticipantRepository _participant_repo
        -LLMProvider _llm
        -TTSService _tts
        +process_message_stream() AsyncIterator~StreamEvent~
        +start_conversation_stream() AsyncIterator~StreamEvent~
        -_stream_text_only() AsyncIterator~StreamEvent~
        -_stream_with_tts() AsyncIterator~StreamEvent~
        -_pick_random_participant() SessionParticipant
        -_build_conversation_history() list
        -_build_prompt() list
        -_extract_sentences() list
        -_get_speaker_id() int
    }
    note for StreamingConversationService "Server-Sent Events (SSE) でストリーミング配信"

    class StreamEvent {
        +str event_type
        +dict data
    }
    note for StreamEvent "SSE イベント: metadata, text_chunk, audio_chunk, complete, error"

    class PracticeSessionRepository {
        -Session _db
        +create() PracticeSession
        +get_by_id() PracticeSession
        +list_by_user_id() list
        +update() PracticeSession
    }

    class SessionMessageRepository {
        -Session _db
        +create() SessionMessage
        +get_by_id() SessionMessage
        +list_by_session_id() list
    }

    class SessionParticipantRepository {
        -Session _db
        +create() SessionParticipant
        +bulk_create() list
        +get_by_id() SessionParticipant
        +list_by_session_id() list
    }

    class LLMProvider {
        +generate() LLMResponse
        +generate_json() dict
        +generate_stream() AsyncIterator~LLMStreamChunk~
    }
    note for LLMProvider "abstract class"

    class LLMStreamChunk {
        +str content
        +str|None finish_reason
    }
    note for LLMStreamChunk "ストリーミングレスポンスのチャンク"

    class GeminiProvider {
        -str model_name
        -GenerativeModel model
        +generate() LLMResponse
        +generate_json() dict
        +generate_stream() AsyncIterator~LLMStreamChunk~
        -_convert_messages() tuple
    }

    class OpenAIProvider {
        -str model
        -AsyncOpenAI client
        +generate() LLMResponse
        +generate_json() dict
        +generate_stream() AsyncIterator~LLMStreamChunk~
    }

    class TTSService {
        -str host
        -int port
        -str base_url
        +synthesize() TTSResult
        +synthesize_by_character() TTSResult
        +get_speakers() list
        +health_check() bool
    }

    ConversationService --> PracticeSessionRepository : uses
    ConversationService --> SessionMessageRepository : uses
    ConversationService --> SessionParticipantRepository : uses
    ConversationService --> LLMProvider : uses
    ConversationService --> TTSService : uses

    StreamingConversationService --> PracticeSessionRepository : uses
    StreamingConversationService --> SessionMessageRepository : uses
    StreamingConversationService --> SessionParticipantRepository : uses
    StreamingConversationService --> LLMProvider : uses
    StreamingConversationService --> TTSService : uses
    StreamingConversationService ..> StreamEvent : yields

    LLMProvider ..> LLMStreamChunk : yields
    LLMProvider <|-- GeminiProvider : implements
    LLMProvider <|-- OpenAIProvider : implements
